--- a/MultiShop.Presentation/appsettings.json
+++ b/MultiShop.Presentation/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MultiShopConnection": "Server=DESKTOP-ATVPBPS;Database=MultiShop;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True"
+  }
+
 }
