CategoryService and its interface run as a example.

--- a/MultiShop.Business/MultiShop.Business.csproj
+++ b/MultiShop.Business/MultiShop.Business.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Mapping\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MultiShop.Data\MultiShop.Data.csproj" />
+  </ItemGroup>
+
 </Project>
