--- a/MultiShop.Presentation/MultiShop.Presentation.csproj
+++ b/MultiShop.Presentation/MultiShop.Presentation.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MultiShop.Business\MultiShop.Business.csproj" />
     <ProjectReference Include="..\MultiShop.Data\MultiShop.Data.csproj" />
   </ItemGroup>
 
