Dtos, ServicesExtension, ConfigurationsExtension, DummyDataExtension created. Datas added manually.

--- a/MultiShop.Business/MultiShop.Business.csproj
+++ b/MultiShop.Business/MultiShop.Business.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
     <Folder Include="Mapping\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
