--- a/MultiShop.Presentation/MultiShop.Presentation.csproj
+++ b/MultiShop.Presentation/MultiShop.Presentation.csproj
@@ -17,9 +17,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Home\Components\Brand\" />
     <Folder Include="wwwroot\admin\" />
   </ItemGroup>
 
