Shop detail page added with product controller.

--- a/MultiShop.Presentation/appsettings.json
+++ b/MultiShop.Presentation/appsettings.json
@@ -8,6 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MultiShopConnection": "Server=DESKTOP-ATVPBPS;Database=MultiShop;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True"
+  },
+  "ProductSettings": {
+    "ProductShowItemCountInIndex": 8,
+    "SimilarProductShowItemCountInDetail": 4
   }
 
 }
