Repository design pattern integrated.

--- a/MultiShop.Business/MultiShop.Business.csproj
+++ b/MultiShop.Business/MultiShop.Business.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MultiShop.Data\MultiShop.Data.csproj" />
+    <ProjectReference Include="..\MultiShop.Repository\MultiShop.Repository.csproj" />
   </ItemGroup>
 
 </Project>
