--- a/MultiShop.Repository/MultiShop.Repository.csproj
+++ b/MultiShop.Repository/MultiShop.Repository.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstract\" />
-    <Folder Include="Concrete\" />
+    <ProjectReference Include="..\MultiShop.Data\MultiShop.Data.csproj" />
   </ItemGroup>
 
 </Project>
